--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,23 +17,8 @@ jobs:
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
         shell: bash
 
-      - name: Update GitHub Actions Runner
-        run: |
-          git config --global --add safe.directory /__w
-          gh auth setup-git
-          gh extension install actions/runner
-          gh actions-runner update
-        shell: bash
-
-      - name: Install Inno Setup
-        run: |
-          curl -L -o is.exe "https://jrsoftware.org/download.php/is.exe"
-          start /wait is.exe /VERYSILENT /SUPPRESSMSGBOXES /NORESTART /SP-
-        shell: cmd
-
-      - name: Verify Inno Setup installation
-        run: iscc /?
-        shell: cmd
+      - name: Inno Setup Action
+        uses: Minionguyjpro/Inno-Setup-Action@v1.2.5
 
       - name: Compile Setup with Inno Setup
         run: iscc /DAppVersion=${{ env.VERSION }} setup.iss
