--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,15 @@ jobs:
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
         shell: bash
 
-      - name: Inno Setup Action
-        uses: Minionguyjpro/Inno-Setup-Action@v1.2.5
+      - name: Install Inno Setup
+        run: |
+          curl -L -o is.exe "https://jrsoftware.org/download.php/is.exe"
+          start /wait is.exe /VERYSILENT /SUPPRESSMSGBOXES /NORESTART /SP-
+        shell: cmd
+
+      - name: Verify Inno Setup installation
+        run: iscc /?
+        shell: cmd
 
       - name: Compile Setup with Inno Setup
         run: iscc /DAppVersion=${{ env.VERSION }} setup.iss
