--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,19 @@ jobs:
         shell: cmd
 
       - name: Verify Inno Setup installation
-        run: iscc /?
+        run: |
+          where iscc
+          if not exist "C:\\Program Files (x86)\\Inno Setup 6\\ISCC.exe" exit 1
+        shell: cmd
+
+      - name: Check if setup.iss exists and readable
+        run: |
+          dir setup.iss
+          type setup.iss
         shell: cmd
 
       - name: Compile Setup with Inno Setup
-        run: iscc /DAppVersion=${{ env.VERSION }} setup.iss
+        run: "C:\\Program Files (x86)\\Inno Setup 6\\ISCC.exe" /DAppVersion=${{ env.VERSION }} "setup.iss"
         shell: cmd
 
       - name: Upload Installer as Artifact
