--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,12 +76,12 @@ jobs:
 
       - name: Sign installer
         run: |
-          signtool sign /fd SHA256 /f WSATestCertificate.pfx /tr http://timestamp.digicert.com /td SHA256 Output\*.exe
+          "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x64\signtool.exe" sign /fd SHA256 /f WSATestCertificate.pfx /tr http://timestamp.digicert.com /td SHA256 Output\*.exe
         shell: cmd
 
       - name: Verify Signature
         run: |
-          signtool verify /pa Output\*.exe
+          "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x64\signtool.exe" verify /pa Output\*.exe
         shell: cmd
 
       - name: Upload Installer as Artifact
